--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,21 @@
     padding: 0;
 }
 
+html {
+    height: 100%;
+    scroll-behavior: smooth;
+}
+
 body {
-    color: #4a4b4c;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     font-size: 16px;
     font-family: 'Rubik', "Arial", sans-serif;
     font-weight: 400;
-    line-height: 1.2;
+    line-height: 22px;
+    background-color: #fff;
+    color: #4a4b4c;
 }
 
 .container {
@@ -57,6 +66,7 @@ a {
     padding: 9px 6px 8px;
     border-radius: 7px;
     background-color: #fff;
+    color: #7296ee;
 }
 
 .header-money-one {
@@ -138,6 +148,7 @@ a {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    margin-bottom: 60px;
 }
 
 .card {
@@ -170,7 +181,10 @@ a {
 
 .card-bottom {
     display: flex;
+    align-items: center;
     margin-top: 15px;
+    font-size: 12px;
+    color: #5e5f61;
 }
 
 .card-bottom-img {
@@ -178,4 +192,239 @@ a {
     height: 20px;
     margin-right: 10px;
     border-radius: 5px;
+}
+
+/* notification section */
+
+
+.notification {
+    margin-left: 91px;
+    margin-right: 58px;
+    display: flex;
+    align-items: center;
+    background-image: url(../img/fon@2x.jpg);
+    border-radius: 10px;
+    margin-bottom: 60px;
+}
+
+.notification-text {
+    padding: 24px 393px 24px 29px;
+    font-size: 20px;
+    line-height: 1.5;
+    font-weight: 500;
+    color: #000;
+}
+
+.notification-link {
+    color:#fff;
+    font-size: 20px;
+    margin-right: 71px;
+    padding: 13px 30px;
+    border-radius: 10px;
+    font-weight: 500;
+    background-color: #f78b3b;
+}
+
+
+/* World */
+
+.news {
+    margin-bottom: 100px;
+}
+
+.news-content {
+    display: flex;
+}
+
+.world {
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 20px;
+    color: #000;
+}
+
+.news-list {
+    list-style: none;
+    margin-right: 10px;
+}
+
+.news-list-item:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+
+.news-list-item {
+    display: block;
+    width: 797px;
+    display: flex;
+    align-items: center;
+    border-radius: 15px;
+    padding: 20px 20px 20px 17px;
+    background-color: #f6f6f6;
+}
+
+.news-item-img {
+    display: block;
+    width: 210px;
+    height: 165px;
+    border-radius: 10px;
+    margin-right: 15px;
+}
+
+.world-list-content-heading {
+    font-size: 20px;
+    line-height: 1.5;
+    font-weight: 500;
+    margin-bottom: 5px;
+    color: #000;
+}
+.world-list-content-text {
+    margin-bottom: 20px;
+    color: #4a4b4c;
+}
+
+.btn-link {
+    font-weight: 500;
+    text-align: center;
+    padding: 17px 343px;
+    border-radius: 10px;
+    background-color: #eaeaea;
+}
+
+
+
+/* Main section */
+.main {
+    width: 393px;
+}
+
+.main-content {
+    margin-bottom: 10px;
+    padding: 20px 17px 25px;
+    border-radius: 15px;
+    background-color: #f6f6f6;
+}
+
+.main-content-heading {
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 25px;
+    color: #000;
+}
+
+.main-content-address {
+    font-size: 18px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.main-content-time {
+    font-size: 13px;
+    color:#5e5f61;
+}
+
+.main-content-time:not(:last-child) {
+    margin-bottom: 20px;
+}
+
+.main-content-line {
+    margin-bottom: 20px;
+}
+
+.main img {
+    display: block;
+}
+
+.main-img {
+    display: block;
+    width: 393px;
+    height: 338px;
+    border-radius: 15px;
+}
+
+
+
+/* footer */
+footer {
+    background-color: #7297ef;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.site-footer-container {
+    width: 998px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.footer-heading {
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 15px;
+    color: #fff;
+}
+
+.footer-top {
+    display: flex;
+    justify-content: top;
+}
+
+
+.footer-top-text {
+    width: 229px;
+    margin-right: 203px;
+    font-size: 12px;
+    line-height: 19px;
+    color: #fff;
+}
+
+.footer-top-list {
+    list-style: none;
+}
+
+.footer-top-list:not(:last-child) {
+    margin-right: 100px;
+    margin-bottom: 30px;
+}
+
+.footer-top-item:not(:last-child) {
+    margin-bottom: 20px;
+}
+
+.footer-nav-link {
+    font-weight: 500;
+    color: #fff;
+}
+
+.footer-line {
+    margin-bottom: 20px;
+}
+
+.footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-bottom-heading {
+    font-size: 18px;
+    color: #fff;
+    font-weight: 500;
+}
+
+.site-footer-socials {
+    list-style: none;
+    display: flex;
+}
+
+.site-footer-socials li:not(:last-child) {
+    margin-right: 25px;
+}
+
+.site-footer-socials a {
+    display: block;
+}
+
+.site-footer-socials svg {
+    display: block;
 }
