--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,19 @@ a {
     color: #222;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+/* OUTLINE */
+*:focus {
+    outline: 2px dashed #7296ec;
+    outline-offset: 3px;
+}
+
+
+
 .button {
     display: inline-block;
     padding: 13px 20px;
@@ -90,6 +103,20 @@ a {
 
 .site-header-logo:active{
     opacity: 0.6;
+}
+
+
+/* GLOBAL SEARCH FORM */
+.global-search-form {
+    margin-right: 25px;
+}
+
+.global-search-form-input {
+    padding: 15px 20px 13px 41px;
+    border: 0;
+    border-radius: 60px;
+    font-size: 14px;
+    line-height: normal;
 }
 
 
