Add bg-img to search input and notifications-cta

--- a/css/articles.css
+++ b/css/articles.css
@@ -74,7 +74,6 @@ img {
 .button-block {
     display: block;
     width: 100%;
-    margin-bottom: 100px;
 }
 
 .button-primary {
@@ -134,6 +133,7 @@ img {
     background-image: url(../img/icon-search.svg);
     background-repeat: no-repeat;
     background-size: 20px;
+    background-position-y: 15px;
     background-position: 15px center;
 }
 
@@ -197,7 +197,6 @@ img {
 
 .sitenav-list {
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
     list-style: none;
@@ -225,254 +224,194 @@ img {
     opacity: 0.6;
 }
 
-/* SITE HEADER BANNER */
 
-.aside-header-banner-link {
+
+/* Main */
+.site-container{
     display: flex;
 }
 
-/* LAYOUT */
-.layout {
-    display: flex;
-}
 
-.layout-2-1 {
-    display: flex;
-    align-items: start;
-}
-
-.layout-2-1-main {
-    width: 797px;
-    margin-right: 40px;
-}
-
-.layout-2-1-sidebar {
-    width: 393px;
-    margin-top: 42px;
-}
-.layout-2-1-sidebar-item:not(:last-child) {
-    margin-bottom: 10px;
-}
-
-
-
-
-/* World */
 .news-content {
-    display: flex;
-    flex-direction: column;
+    width: 797px;
+    margin-right: 10px;
 }
 
-.news-heading {
-    font-size: 24px;
+.content-top {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+.content-top-img {
+    margin-right: 10px;
+}
+
+.content-top-text {
+    font-size: 14px;
+    color: #5e5f61;
+}
+
+.news-content-heading {
+    font-size: 26px;
     font-weight: 500;
-    margin-top: 50px;
+    line-height: 36px;
     margin-bottom: 20px;
     color: #000;
 }
 
-.news-list {
-    list-style: none;
-    margin-right: 10px;
-    margin-bottom: 15px;
-}
-
-.news-list-item:not(:last-child) {
-    margin-bottom: 10px;
-}
-
-.news-list-item:last-child {
-    margin-bottom: 7px;
-}
-
-
-.news-list-item {
-    width: 797px;
-    display: flex;
-    align-items: flex-start;
-    border-radius: 15px;
-    padding: 20px 20px 20px 17px;
-    background-color: #f6f6f6;
-}
-
-.news-item-img {
+.news-content-img {
     display: block;
-    width: 210px;
-    height: 165px;
-    border-radius: 10px;
-    margin-right: 15px;
+    width: 797px;
+    height: 300px;
+    border-radius: 13px;
+    margin-bottom: 25px;
 }
 
-.world-list-content-link {
-    display: inline-block;
-}
-
-
-.world-list-content-heading {
+.news-content-text {
     font-size: 20px;
-    line-height: 1.5;
-    font-weight: 500;
-    margin-bottom: 5px;
+    line-height: 30px;
     color: #000;
 }
 
-.world-list-content-heading:hover {
-    color:#7296ec;
+.news-content-text:not(:last-child) {
+    margin-bottom: 25px;
 }
 
-.world-list-content-heading:active {
-    opacity: 0.6;
+.text-bottom {
+    margin-bottom: 50px;
 }
 
-.world-list-content-text {
-    flex-grow: 1;
-    margin-bottom: 17px;
+.body-line {
+    margin-bottom: 60px;
+    color: #d2d2d2;
+}
+
+
+
+/* Main section */
+.main {
+    width: 393px;
+}
+
+.main-content {
+    margin-bottom: 10px;
+    padding: 20px 17px 25px;
+    border-radius: 15px;
+    background-color: #f6f6f6;
+}
+
+.main-content-heading {
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 25px;
+    color: #000;
+}
+
+.main-content-address {
+    font-size: 18px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.main-content-time {
+    font-size: 13px;
+    color:#5e5f61;
+}
+
+.main-content-time:not(:last-child) {
+    margin-bottom: 20px;
+}
+
+.main-content-line {
+    margin-bottom: 20px;
+}
+
+.main img {
+    display: block;
+}
+
+.main-img {
+    display: block;
+    width: 393px;
+    height: 338px;
+    border-radius: 15px;
+}
+
+/* Body bottom */
+.body-bottom-heading {
+    margin-bottom: 20px;
+    font-size: 24px;
+    font-weight: 500;
+    color: #000;
+}
+
+.interest {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 18px 15px 17px;
+    margin-bottom: 100px;
+    border-radius: 15px;
+}
+
+.interest-card {
+    width: 393px;
+    border-radius: 15px;
+    padding: 20px 18px 15px 17px;
+    background-color: #f6f6f6;
+}
+
+.card-two {
+    padding: 20px 30px 15px 17px;
+}
+
+.card-three {
+    padding: 20px 23px 15px 16px;
+}
+
+.interest-card:not(:last-child) {
+    margin-right: 10px;
+}
+
+.interest-card-heading {
+    font-size: 20px;
+    margin-bottom: 10px;
+    font-weight: 500;
+    line-height: 1.5;
+    color: #000;
+}
+
+.interest-card-text {
+    margin-bottom: 20px;
     color: #4a4b4c;
 }
 
-.news-list-more-button {
-    width: 796px;
-    padding: 17px;
-}
 
-.article-card-link {
-    display: inline-block;
-}
-
-.article-card-link:hover {
-    color: #7296ec;
-}
-
-.article-card-link:active {
-    opacity: 0.6;
-}
-
-.article-card-text {
-    margin-bottom: 15px;
-    color:#4a4b4c;
-}
-
-.article-card-img {
-    display: block;
-    width: 359px;
-    height: 165px;
-    margin-top: auto;
-    margin-bottom: 15px;
-    border-radius: 10px;
-    object-fit: cover;
-}
-
-.article-card-footer {
+.card-bottom {
     display: flex;
     align-items: center;
+    font-size: 12px;
+    color: #5e5f61;
 }
 
-.article-card-footer-img {
+.card-bottom-img {
     width: 20px;
     height: 20px;
     margin-right: 10px;
     border-radius: 5px;
 }
 
-.article-card-footer {
-    font-size: 12px;
-    color: #5e5f61;
-}
-
-.article-card-course {
-    font-weight: normal;
-    line-height: normal;
-    color: #5e5f61;
-}
-
-/* SIDEBAR-NEWS-CARD */
-
-.sidebar-news-card {
-    padding: 20px;
-    border-radius: 15px;
-    background-color: #f6f6f6;
-    color: #000;
-}
-
-.sidebar-news-card-heading {
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 18px;
-    margin-bottom: 25px;
-    color: #000;
-}
-
-.sidebar-news-card-list {
-    list-style: none;
-}
-
-.sidebar-news-card-item {
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-
-.sidebar-news-card-item:first-child {
-    padding-top: 0;
-}
-
-.sidebar-news-card-item:last-child {
-    padding-bottom: 0;
-}
-
-.sidebar-news-card-item:not(:last-child) {
-    border-bottom: 1px solid #d2d2d2;
-}
-
-.sidebar-news-card-title {
-    margin-top: 0;
-    margin-bottom: 8px;
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 22px;
-}
-
-.sidebar-news-card-link:hover {
-    color:#7296ec;
-}
-
-.sidebar-news-card-link:active {
-    opacity: 0.6;
-}
-
-.sidebar-news-card-time {
-    font-size: 18px;
-    font-weight: 500;
-    margin-bottom: 10px;
-}
-
-.sidebar-news-card-time:not(:last-child) {
-    margin-bottom: 20px;
-}
-.sidebar-news-card-time {
-    font-size: 13px;
-    color:#5e5f61;
-}
 
 
-/* SIDEBAR-AD */
-.sidebar-ad {
-    display: flex;
-}
-
-.sidebar-ad-img {
-    width: 393px;
-    height: 553px;
-    object-fit: cover;
-    border-radius: 15px;
-}
 
 
 
 /* footer */
-.site-footer {
+footer {
+    background-color: #7297ef;
     padding-top: 40px;
     padding-bottom: 40px;
-    background-color: #7297ef;
 }
 
 .site-footer-container {
@@ -481,50 +420,25 @@ img {
     margin-right: auto;
 }
 
-.site-footer *:focus {
-    outline: 2px dashed #fff;
-}
-
-.site-footer-logo-wrapper {
-    display: flex;
+.footer-heading {
+    font-size: 24px;
+    font-weight: 700;
     margin-bottom: 15px;
-}
-
-.site-footer-logo {
-    display: flex;
-}
-
-.site-footer-logo-img {
-    display: inline-block;
-    width: 264px;
-    height: 28px;
-    object-fit: contain;
-}
-
-.site-footer-logo-img:hover {
-    opacity: 0.8;
-}
-
-.site-footer-logo-img:active {
-    opacity: 0.6;
+    color: #fff;
 }
 
 .footer-top {
     display: flex;
+    justify-content: top;
 }
 
+
 .footer-top-text {
-    width: 230px;
-    margin-right: 200px;
+    width: 229px;
+    margin-right: 203px;
     font-size: 12px;
     line-height: 19px;
     color: #fff;
-}
-
-.footer-top-wrapper {
-    display: flex;
-    flex-grow: 1;
-    margin-bottom: 30px;
 }
 
 .footer-top-list {
@@ -533,6 +447,7 @@ img {
 
 .footer-top-list:not(:last-child) {
     margin-right: 100px;
+    margin-bottom: 30px;
 }
 
 .footer-top-item:not(:last-child) {
@@ -556,27 +471,23 @@ img {
 
 .footer-bottom-heading {
     font-size: 18px;
-    font-weight: 500;
-    line-height: 23px;
     color: #fff;
+    font-weight: 500;
 }
 
-.site-footer-socials-list {
+.site-footer-socials {
     list-style: none;
     display: flex;
 }
 
-.site-footer-socials-item:not(:last-child) {
+.site-footer-socials li:not(:last-child) {
     margin-right: 25px;
 }
 
-.site-footer-socials-links {
-    display: flex;
+.site-footer-socials a {
+    display: block;
 }
 
-.site-footer-socials-icon {
-    flex-shrink: 0;
-    width: 25px;
-    height: 25px;
-    object-fit: contain;
+.site-footer-socials svg {
+    display: block;
 }
