--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,10 @@ img {
     border-radius: 60px;
     font-size: 14px;
     line-height: normal;
+    background-image: url(../img/icon-search.svg);
+    background-repeat: no-repeat;
+    background-size: 20px;
+    background-position: 15px center;
 }
 
 
@@ -181,10 +185,13 @@ img {
     padding-top: 12px;
     padding-bottom: 12px;
     border-bottom: 1px solid #d1d1d1;
-    margin-bottom: 40px;
     font-size: 18px;
     font-weight: 500;
     line-height: normal;
+}
+
+.sitenav:not(:last-child) {
+    margin-bottom: 40px;
 }
 
 .sitenav-list {
@@ -319,6 +326,10 @@ img {
     margin: 60px 70px;
     border-radius: 10px;
     background-color: #ffd7ba;
+    background-image: url(../img/global-naticication-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
 }
 
 .notification-cta-text {
@@ -637,4 +648,114 @@ img {
     width: 25px;
     height: 25px;
     object-fit: contain;
+}
+
+/* FORM */
+
+.form-field-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.form-field-wrapper:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+.form-field-wrapper .form-group {
+    width: calc(50% - 5px);
+    margin-bottom: 0;
+}
+
+.form-group:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+.form-field {
+    display: block;
+    width: 100%;
+    padding: 18px 20px;
+    border-radius: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.20);
+}
+
+.form-field-textarea {
+    resize: vertical;
+    min-height: 180px;
+}
+
+/* DIFINITIONS CARD */
+.difinitions-card {
+    padding: 20px 25px;
+    margin: 0;
+    border-radius: 10px;
+    background-color: #f6f6f6;
+    color: #000;
+}
+
+.difinitions-card-item {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.difinitions-card-item:not(:last-child) {
+    border-bottom: 1px solid #d2d2d2;
+}
+
+.difinitions-card-title {
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 7px;
+    line-height: normal;
+    color: #000;
+}
+
+.difinitions-card-value {
+    margin: 0;
+    line-height: 24px;
+}
+
+
+
+/* CONTACT PAGE */
+
+.contact-page-heading {
+    margin-top: 0;
+    margin-bottom: 20px;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: normal;
+}
+
+.contact-page-content {
+    display: flex;
+}
+
+.contact-page-form {
+    display: flex;
+    flex-direction: column;
+    width: 696px;
+}
+
+.contact-page-form-submit {
+    margin-top: 20px;
+    align-self: flex-end;
+}
+
+.contact-page-info {
+    width: 494px;
+    height: 310px;
+    margin-left: 10px;
+}
+
+/* RETINA BGS */
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (   min--moz-device-pixel-ratio: 2),
+only screen and (     -o-min-device-pixel-ratio: 2/1),
+only screen and (        min-device-pixel-ratio: 2),
+only screen and (                min-resolution: 192dpi),
+only screen and (                min-resolution: 2dppx) {
+    .notification-cta {
+        background-image: url(../img/global-naticication-bg@2x.jpg);
+    }
 }
